# inspector

./: .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_inspector.py  streamlit_kizki.py
.devcontainer/: devcontainer.json
data/XK3P-23009-No14/: capture_session_params.json
data/XK3P-23009-No15/: capture_session_params.json
scratch_inspector/: grade_result.csv  inspector.py  piano_result.csv  piano_result_.csv  scratch_inspector.py
src/: __init__.py  dark_synthesis.py  generate_test_images.py  kizki_detector.py  run_kizki.py  run_scratch_detector.py  scratch_detector.py  visualize_kizki_process.py  visualize_scratch_process.py
tests/: test_kizki.py  test_scratch_detector.py
