[project]
name = "scratch-inspector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.42.0",
    "opencv-python-headless>=4.11.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "plotly>=5.20.0",
    "scipy>=1.12.0",
    "altair>=5.0.0",
]
